# task-manager

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6ae1ca8af027_create_user_table.py  6b2a899c6300_create_task_result_table.py  77787bda5ea0_create_task_status_table.py  896fb4e962b9_create_task_status_history_table.py  ef631ba858dc_add_user_id_fk_in_task_status.py
src/api/: deps.py  task.py  user.py
src/db/: __init__.py  base.py  task_result.py  task_status.py  task_status_history.py  user.py
src/schema/: task.py  user.py
src/service/: common.py  status.py  task_service.py  user_service.py  verify_status.py
src/utils/: constants.py  db.py  logger.py
